Adding elastic search service to the webservice DAO: HIbernateUtil - Add initialization from DataSource DAOFactory: Initialisation from Datasourse name. Test using a datasource pool. Security bug fix when usertoken didnt' exist. IsaTab2MetabolightsConverter: Ignore  release date from the file if already exist one in the database (should be tha same). add log4j.xml since it take precedence over other log4j.xml inside dependencies. grrr Add a search controller with some basic functionality.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1839 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/ISAcreator-shaded/pom.xml
+++ b/ISAcreator-shaded/pom.xml
@@ -53,6 +53,9 @@
                                         <exclude>org/slf4j/**</exclude>
                                         <exclude>META-INF/maven/org.slf4j/**</exclude>
                                         <exclude>org/apache/log4j/**</exclude>
+                                        <exclude>org/hibernate/**</exclude>
+                                        <exclude>META-INF/maven/org.hibernate/**</exclude>
+                                        <exclude>javax/persistence/**</exclude>
                                     </excludes>
                                 </filter>
                             </filters>
@@ -108,6 +111,12 @@
             <groupId>org.isatools</groupId>
             <artifactId>ISAcreator</artifactId>
             <version>1.7.7</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hibernate</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
