--- a/metabolights-dao/pom.xml
+++ b/metabolights-dao/pom.xml
@@ -44,21 +44,21 @@
             <artifactId>hibernate-core</artifactId>
             <version>4.3.8.Final</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>uk.ac.ebi.metabolights</groupId>-->
+            <!--<artifactId>ISAcreator-shaded</artifactId>-->
+            <!--<version>1.7.8</version>-->
+            <!--<exclusions>-->
+                <!--<exclusion>-->
+                    <!--<groupId>org.isatools</groupId>-->
+                    <!--<artifactId>ISAcreator</artifactId>-->
+                <!--</exclusion>-->
+            <!--</exclusions>-->
+        <!--</dependency>-->
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-annotations</artifactId>
-            <version>3.5.6-Final</version>
-        </dependency>
-        <dependency>
-            <groupId>uk.ac.ebi.metabolights</groupId>
-            <artifactId>ISAcreator-shaded</artifactId>
-            <version>1.7.8</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.isatools</groupId>
-                    <artifactId>ISAcreator</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>org.isatools</groupId>
+            <artifactId>ISAcreator-api</artifactId>
+            <version>1.7.7</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
@@ -107,6 +107,7 @@
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-catalina</artifactId>
             <version>8.0.18</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <repositories>
