--- a/MetaboLights-Search/service/pom.xml
+++ b/MetaboLights-Search/service/pom.xml
@@ -32,6 +32,7 @@
 
     <artifactId>search-service</artifactId>
     <name>MetaboLights Search Service</name>
+    <version>3.0</version>
 
     <dependencies>
         <dependency>
