--- a/metabolights-ws-client/pom.xml
+++ b/metabolights-ws-client/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.4.3</version>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.metabolights</groupId>
+            <artifactId>search-service</artifactId>
+            <version>3.0</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>com.fasterxml.jackson.datatype</groupId>-->
             <!--<artifactId>jackson-datatype-guava</artifactId>-->
