DAO: Format releasedate to date for serialization Return DAOFactory when initializing it. Model: Add LiteStudy to the model and make Study extend it.
Webservice: 
Make anonymous user a active by default.
Enable CORS (Cross-origin resource sharing) in the webservice.



git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1846 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webservice/pom.xml
+++ b/metabolights-webservice/pom.xml
@@ -164,6 +164,12 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>catalina</artifactId>
+            <version>6.0.35</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -198,10 +204,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.2</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
