--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -74,7 +74,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
                 <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
@@ -595,7 +598,7 @@
         <dependency>
             <artifactId>metabolights-ws-client</artifactId>
             <groupId>uk.ac.ebi.metabolights</groupId>
-            <version>2.1-SNAPSHOT</version>
+            <version>3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <artifactId>metabolights-isatab-utils</artifactId>
