--- a/metabolights-referencelayer/importer/pom.xml
+++ b/metabolights-referencelayer/importer/pom.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!--
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
   ~ European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
   ~
-  ~ Last modified: 10/3/14 9:29 AM
+  ~ Last modified: 2015-Apr-07
   ~ Modified by:   kenneth
   ~
-  ~ Copyright 2014 EMBL - European Bioinformatics Institute
+  ~ Copyright 2015 EMBL - European Bioinformatics Institute
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
-  ~ Y
-  ~ ou may obtain a copy of the License at
+  ~ You may obtain a copy of the License at
   ~
   ~      http://www.apache.org/licenses/LICENSE-2.0
   ~
   ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
   -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>importer</artifactId>
-    <version>0.2-SNAPSHOT</version>
-    <name>Reference layer importer</name>
-    <!--Migrated to slf4j + log4j-->
+    <artifactId>referencelayer-importer</artifactId>
+    <groupId>uk.ac.ebi.metabolights.referencelayer</groupId>
+    <version>0.4-SNAPSHOT</version>
+    <name>MetaboLights Reference layer importer</name>
     <description>Imports metabolites from Chebi and updates species information</description>
 
     <parent>
