--- a/metabolights-species/species-core/pom.xml
+++ b/metabolights-species/species-core/pom.xml
@@ -6,17 +6,16 @@
   ~
   ~ European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
   ~
-  ~ Last modified: 2014-Oct-21
-  ~ Modified by:   conesa
+  ~ Last modified: 2015-Apr-02
+  ~ Modified by:   kenneth
   ~
-  ~
-  ~ Copyright 2014 EMBL-European Bioinformatics Institute.
+  ~ Copyright 2015 EMBL - European Bioinformatics Institute
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
   ~ You may obtain a copy of the License at
   ~
-  ~    http://www.apache.org/licenses/LICENSE-2.0
+  ~      http://www.apache.org/licenses/LICENSE-2.0
   ~
   ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
   -->
@@ -24,20 +23,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>metabolights-species</artifactId>
-        <groupId>uk.ac.ebi.metabolights</groupId>
-        <version>0.2-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>uk.ac.ebi.metabolights</groupId>
     <artifactId>species-core</artifactId>
     <name>MetaboLights Species Core</name>
-    <!--Migrated to slf4j + log4j-->
     <description>Core library for all the species logic and operations</description>
     <packaging>jar</packaging>
     <version>0.3-SNAPSHOT</version>
+
+    <parent>
+        <artifactId>metabolights-species</artifactId>
+        <groupId>uk.ac.ebi.metabolights</groupId>
+        <version>0.2-SNAPSHOT</version>
+    </parent>
 
     <dependencies>
 
