--- a/metabolights-utils/metabolights-isatab-utils/pom.xml
+++ b/metabolights-utils/metabolights-isatab-utils/pom.xml
@@ -29,14 +29,34 @@
     <groupId>uk.ac.ebi.metabolights</groupId>
     <name>MetaboLights ISAtab Utilities</name>
     <description>MetaboLights ISAtab Utilities</description>
-    <!--Migrated to slf4j + log4j-->
     <version>1.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <parent>
         <artifactId>metabolights-utils</artifactId>
         <groupId>uk.ac.ebi.metabolights</groupId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
+
+    <build>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-ssh</artifactId>
+                <version>1.0-beta-6</version>
+            </extension>
+        </extensions>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
