--- a/metabolights-webservice/pom.xml
+++ b/metabolights-webservice/pom.xml
@@ -67,7 +67,7 @@
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
             <artifactId>metabolights-dao</artifactId>
-            <version>3.0-SNAPSHOT</version>
+            <version>3.1-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
         <dependency>
@@ -192,6 +192,11 @@
                     <groupId>commons-lang</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.9</version>
         </dependency>
     </dependencies>
 
