Domain: Use LiteStudy intstead of StudyLite. Synchronise User-Study collections (study1.getUsers().add(newUser)...implies user.getStudies().add(study1)). DAO: Save only newEntities parameter to avoid overwriting relationship study-user. Bug fix. Main Pom file: remove unused ISAcreator shaded module.

--- a/metabolights-domain/pom.xml
+++ b/metabolights-domain/pom.xml
@@ -48,6 +48,12 @@
             <!--<artifactId>guava</artifactId>-->
             <!--<version>14.0</version>-->
         <!--</dependency>-->
+        <dependency>
+            <groupId>net.java.openjfx.backport</groupId>
+            <artifactId>openjfx-78-backport</artifactId>
+            <version>1.8.0-ea-b96.1</version>
+        </dependency>
     </dependencies>
+
 
 </project>
