--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <module>metabolights-referencelayer</module>
         <module>metabolights-webapps</module>
         <module>metabolights-species</module>
-        <module>ISAcreator-shaded</module>
+        <!--<module>ISAcreator-shaded</module>-->
         <module>metabolights-search</module>
     </modules>
     <build>
