--- a/metabolights-utils/pom.xml
+++ b/metabolights-utils/pom.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!--
   ~ EBI MetaboLights - http://www.ebi.ac.uk/metabolights
   ~ Cheminformatics and Metabolism group
   ~
   ~ European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
   ~
-  ~ Last modified: 10/24/13 9:15 AM
-  ~ Modified by:   conesa
+  ~ Last modified: 2015-Apr-21
+  ~ Modified by:   kenneth
   ~
-  ~
-  ~ ©, EMBL, European Bioinformatics Institute, 2014.
+  ~ Copyright 2015 EMBL - European Bioinformatics Institute
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
   ~ You may obtain a copy of the License at
   ~
-  ~    http://www.apache.org/licenses/LICENSE-2.0
+  ~      http://www.apache.org/licenses/LICENSE-2.0
   ~
   ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
   -->
@@ -30,7 +30,7 @@
     <name>MetaboLights Utilities</name>
     <description>MetaboLights Utilities</description>
     <packaging>pom</packaging>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.2-SNAPSHOT</version>
 
     <parent>
         <artifactId>metabolights-main</artifactId>
@@ -42,9 +42,7 @@
         <module>metabolights-isatab-utils</module>
         <module>metabolights-mztab</module>
         <module>metabolights-sampledb</module>
+        <module>metabolights-export</module>
     </modules>
-
-    <dependencies>
-    </dependencies>
 
 </project>
