Fix: Public Release date in sync (DB/Java/index) to the second (no time, aways midnight) Queue emails: Better information in the emails. User info reported in the technical info Emails using apiToken...converting userApi to User.

--- a/MetaboLights-Search/pom.xml
+++ b/MetaboLights-Search/pom.xml
@@ -32,7 +32,9 @@
 
     <artifactId>metabolights-search</artifactId>
     <name>MetaboLights Search</name>
+    <version>1.4</version>
     <packaging>pom</packaging>
+
     <modules>
         <module>service</module>
         <module>service-es</module>
