--- a/MetaboLights-Search/service-es/pom.xml
+++ b/MetaboLights-Search/service-es/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
             <artifactId>metabolights-domain</artifactId>
-            <version>3.0-SNAPSHOT</version>
+            <version>3.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -59,6 +59,19 @@
             <artifactId>gson</artifactId>
             <version>2.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${com.fasterxml.jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${com.fasterxml.jackson.version}</version>
+        </dependency>
+
 
         <!--Test scope-->
         <!--Database drivers-->
@@ -79,7 +92,7 @@
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
             <artifactId>metabolights-dao</artifactId>
-            <version>3.0-SNAPSHOT</version>
+            <version>3.1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
 
