--- a/metabolights-ws-client/pom.xml
+++ b/metabolights-ws-client/pom.xml
@@ -40,17 +40,17 @@
         <dependency>
             <artifactId>metabolights-domain</artifactId>
             <groupId>uk.ac.ebi.metabolights</groupId>
-            <version>3.0-SNAPSHOT</version>
+            <version>3.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.4.3</version>
+            <version>${com.fasterxml.jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.4.3</version>
+            <version>${com.fasterxml.jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.metabolights</groupId>
