--- a/metabolights-domain/pom.xml
+++ b/metabolights-domain/pom.xml
@@ -29,7 +29,7 @@
     <artifactId>metabolights-domain</artifactId>
     <name>MetaboLights Domain</name>
     <description>MetaboLights Domain module</description>
-    <version>3.0-SNAPSHOT</version>
+    <version>3.1-SNAPSHOT</version>
 
     <parent>
         <artifactId>metabolights-main</artifactId>
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.4.0</version>
+            <version>${com.fasterxml.jackson.version}</version>
         </dependency>
         <!--<dependency>-->
             <!--<groupId>com.google.guava</groupId>-->
@@ -53,7 +53,18 @@
             <artifactId>openjfx-78-backport</artifactId>
             <version>1.8.0-ea-b96.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${com.fasterxml.jackson.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${com.fasterxml.jackson.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
 
 </project>
