--- a/MetaboLights-Search/pom.xml
+++ b/MetaboLights-Search/pom.xml
@@ -29,7 +29,7 @@
         <version>1.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <version>3.1</version>
     <artifactId>metabolights-search</artifactId>
     <name>MetaboLights Search</name>
     <packaging>pom</packaging>
