--- a/metabolights-utils/pom.xml
+++ b/metabolights-utils/pom.xml
@@ -42,6 +42,7 @@
         <module>metabolights-isatab-utils</module>
         <module>metabolights-mztab</module>
         <module>metabolights-sampledb</module>
+        <module>metabolights-export</module>
     </modules>
 
 </project>
