WEB APP: visual representation of status as steps added menu to change the status WS: get study by obfuscation code WS cliente: getStudyByObfudcationCode es-search: index obfuscation code, not analysed. some clean up.

--- a/metabolights-referencelayer/pom.xml
+++ b/metabolights-referencelayer/pom.xml
@@ -44,7 +44,7 @@
         <module>dao</module>
         <module>WoRMS-client</module>
         <module>importer</module>
-        <!-- module>BMLNMRtoMetaboLights</module-->
+        <!--<module>BMLNMRtoMetaboLights</module>-->
     </modules>
 
     <build>
