--- a/metabolights-dao/pom.xml
+++ b/metabolights-dao/pom.xml
@@ -39,22 +39,7 @@
     </parent>
 
     <dependencies>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>4.3.8.Final</version>
-        </dependency>
-        <!--<dependency>-->
-            <!--<groupId>uk.ac.ebi.metabolights</groupId>-->
-            <!--<artifactId>ISAcreator-shaded</artifactId>-->
-            <!--<version>1.7.8</version>-->
-            <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.isatools</groupId>-->
-                    <!--<artifactId>ISAcreator</artifactId>-->
-                <!--</exclusion>-->
-            <!--</exclusions>-->
-        <!--</dependency>-->
+        <!--Other metabolights dependencies-->
         <dependency>
             <groupId>org.isatools</groupId>
             <artifactId>ISAcreator-api</artifactId>
@@ -69,6 +54,13 @@
             <groupId>uk.ac.ebi.metabolights</groupId>
             <artifactId>metabolights-isatab-utils</artifactId>
             <version>1.2-SNAPSHOT</version>
+        </dependency>
+
+        <!-- Third party dependencies -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.3.8.Final</version>
         </dependency>
         <dependency>
             <groupId>net.sourceforge.javacsv</groupId>
@@ -85,6 +77,8 @@
             <artifactId>jtstand-sequence</artifactId>
             <version>1.2.1</version>
         </dependency>
+
+        <!-- Testing dependencies-->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
