--- a/metabolights-webservice/pom.xml
+++ b/metabolights-webservice/pom.xml
@@ -44,6 +44,22 @@
     </properties>
 
     <dependencies>
+        <!--Other metabolights dependencies-->
+        <dependency>
+            <groupId>uk.ac.ebi.metabolights</groupId>
+            <artifactId>metabolights-dao</artifactId>
+            <version>3.1-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+
+        <dependency>
+            <groupId>uk.ac.ebi.metabolights</groupId>
+            <artifactId>service-es</artifactId>
+            <version>3.1</version>
+        </dependency>
+
+
+        <!--Other third party dependencies-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
@@ -53,17 +69,6 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${com.fasterxml.jackson.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>uk.ac.ebi.metabolights</groupId>
-            <artifactId>service-es</artifactId>
-            <version>3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>uk.ac.ebi.metabolights</groupId>
-            <artifactId>metabolights-dao</artifactId>
-            <version>3.1-SNAPSHOT</version>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
