Add studies going live to dao and WS.

--- a/metabolights-dao/src/test/resources/hibernate.hidden.properties
+++ b/metabolights-dao/src/test/resources/hibernate.hidden.properties
@@ -4,5 +4,6 @@ hibernate.connection.password=reader
 hibernate.connection.driver_class=org.postgresql.Driver
 hibernate.connection.url=jdbc:postgresql://localhost/metabolights
 
+hibernate.show_sql = true
 # To move to code configuration.
 hibernate.id.new_generator_mappings=true
