--- a/metabolights-domain/pom.xml
+++ b/metabolights-domain/pom.xml
@@ -29,7 +29,7 @@
     <artifactId>metabolights-domain</artifactId>
     <name>MetaboLights Domain</name>
     <description>MetaboLights Domain module</description>
-    <version>3.1-SNAPSHOT</version>
+    <version>4.0-SNAPSHOT</version>
 
     <parent>
         <artifactId>metabolights-main</artifactId>
@@ -53,6 +53,13 @@
             <artifactId>openjfx-78-backport</artifactId>
             <version>1.8.0-ea-b96.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.5</version>
+        </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
