ReferenceLayerController removed Browse study now filters by type study Study health improved

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -19,7 +19,7 @@
             {
                 "selected": false,
                 "title": "Browse Studies",
-                "href": "browse",
+                "href": "studies",
                 "tooltip": "Browse all Studies/Experiments"
             },
             {
