Updated jar build in pom and input param checker

--- a/metabolights-utils/metabolights-export/pom.xml
+++ b/metabolights-utils/metabolights-export/pom.xml
@@ -13,9 +13,70 @@
     <artifactId>metabolights-utils</artifactId>
     <version>1.2-SNAPSHOT</version>
   </parent>
+  <build>
+    <plugins>
+        <plugin>
+            <!-- Build an executable JAR -->
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.4</version>
+            <executions>
+                <execution>
+                    <id>default-jar</id>
+                    <configuration>
+                        <classifier>deps</classifier>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
 
+      <!-- Set a compiler level -->
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>2.3.2</version>
+          <configuration>
+              <source>1.7</source>
+              <target>1.7</target>
+              <encoding>UTF-8</encoding>
+          </configuration>
+      </plugin>
+
+      <!-- Maven Assembly Plugin -->
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>2.4.1</version>
+          <configuration>
+              <!-- get all project dependencies -->
+              <descriptorRefs>
+                  <descriptorRef>jar-with-dependencies</descriptorRef>
+              </descriptorRefs>
+              <!-- MainClass in mainfest make a executable jar -->
+              <archive>
+                  <manifest>
+                      <mainClass>uk.ac.ebi.metabolights.utils.exporter.MetabolightsXMLExporter</mainClass>
+                  </manifest>
+              </archive>
+              <finalName>${project.artifactId}-${project.version}-deps</finalName>
+          </configuration>
+          <executions>
+              <execution>
+                  <id>make-assembly</id>
+                  <!-- bind to the packaging phase -->
+                  <phase>package</phase>
+                  <goals>
+                      <goal>single</goal>
+                  </goals>
+              </execution>
+          </executions>
+      </plugin>
+
+    </plugins>
+
+
+  </build>
   <dependencies>
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
