hasNMR and hasMS icons fixed

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -83,7 +83,7 @@
             }
         ],
         "search": {
-            "action": "search",
+            "action": "/metabolights/search",
             "method": "post",
             "inputName": "freeTextQuery",
             "examples": [
