Metaboanalyst text added to analysis page

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -38,7 +38,7 @@
                 "selected": false,
                 "title": "Analysis",
                 "href": "/metabolights/analysis",
-                "tooltip": "MetaboAnalyst 2.5"
+                "tooltip": "Analysis tools"
             },
             {
                 "selected": false,
