Search name changed to Homo sapiens for Human

--- a/metabolights-webapps/src/main/resources/rl_frontier_config.json
+++ b/metabolights-webapps/src/main/resources/rl_frontier_config.json
@@ -92,8 +92,8 @@
                     "href": "/metabolights/search?freeTextQuery%3Dalanine"
                 },
                 {
-                    "title": "human",
-                    "href": "/metabolights/search?freeTextQuery%3Dhuman"
+                    "title": "Homo sapiens",
+                    "href": "/metabolights/search?freeTextQuery%3DHomo sapiens"
                 },
                 {
                     "title": "urine",
