--- a/metabolights-domain/pom.xml
+++ b/metabolights-domain/pom.xml
@@ -70,6 +70,16 @@
             <groupId>uk.ac.ebi.chebi.webapps.chebiWS.client</groupId>
             <artifactId>chebiWS-client</artifactId>
             <version>2.2.2</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>stax-ex</artifactId>
+                    <groupId>org.jvnet.staxex</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>stax-api</artifactId>
+                    <groupId>javax.xml.stream</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 </project>
